--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,262 @@
+/* DEFAULT SETTINGS */
 
+* 
+{
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+html
+{
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+}
+body
+{
+	-webkit-touch-callout: none;          
+    -webkit-text-size-adjust: none;  
+    
+	
+	margin: 0;
+	padding: 0;
+	font-family: "std", sans-serif;
+	font-size: 16px;
+	line-height: 1.6;
+	color: #aaa;
+	background: #f8f8f8;
+}
+
+#title-bar
+{
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 60px;
+	background: rgb(255, 187, 0);
+}
+	h1
+	{
+		width: 90%;
+		max-width: 500px;
+		margin: 0 auto;
+		color: #fff;
+		font-size: 105%;
+		font-family: "high";
+		font-weight: lighter;
+		padding-top: 17px;
+	}
+		h1 i
+		{
+			margin-right: 5px;
+		}
+
+#main > .inside
+{
+	width: 90%;
+	max-width: 500px;
+	margin: 0 auto;
+	padding: 80px 0;
+}
+
+h2
+{
+	font-family: "high";
+	font-weight: lighter;
+	color: #444;
+	text-align: center;
+	font-size: 130%;
+	margin: 0;
+	margin-bottom: 25px;
+    margin-top: 10px;
+}
+h3
+{
+	font-family: "high";
+	font-weight: lighter;
+	color: #444;
+	font-size: 120%;
+	margin: 0;
+	margin-bottom: 15px;
+}
+p
+{
+	margin: 0;
+	margin-bottom: 15px;
+}
+a
+{
+	color: rgb(42, 171, 141);
+	text-decoration: none;
+}
+a:hover
+{
+	color: rgb(33, 137, 113);
+}
+a:active
+{
+	color: rgb(38, 9, 32);
+}
+
+table
+{
+	margin-bottom: 25px;
+	box-shadow: 0 2px 25px rgba(0,0,0, 0.1);
+	width: 100%;
+	border-collapse: collapse;
+}
+	table thead
+	{
+		color: #666;
+		border-bottom: 1px solid #e4e4e4;
+	}
+		table td,
+		table th
+		{
+			padding: 10px 20px;
+		}
+		table tbody tr:nth-child(odd)
+		{
+			background: #f2f2f2;
+		}
+		table tbody tr:hover
+		{
+			color: #666;
+		}
+
+form,
+section > div
+{
+	padding: 25px;
+	background: #fff;
+	margin: 0;
+	margin-bottom: 25px;
+	text-align: center;
+	box-shadow: 0 2px 25px rgba(0,0,0, 0.1);
+}
+	form p.message
+	{
+		color: rgb(42, 171, 151);
+		padding-bottom: 10px;
+		margin-bottom: 15px;
+		border-bottom: 1px solid rgba(42, 171, 151, 0.25);
+	}
+	form > div
+	{
+		margin-bottom: 15px;
+	}
+		form label
+		{
+			font-size: 95%;
+			display: block;
+			margin-bottom: 5px;
+		}
+		form input
+		{
+			background: #f4f4f4;
+			border: 1px solid #e4e4e4;
+			padding: 10px;
+			box-sizing: border-box;
+			font-size: 100%;
+			font-family: "std";
+			color: #666;
+			width: 100%;
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			appearance: none;
+			outline: 0;
+			border-radius: 0;
+		}
+		form button
+		{
+			background: rgb(42, 171, 141);
+			border: 0;
+			padding: 10px;
+			box-sizing: border-box;
+			font-size: 105%;
+			text-transform: uppercase;
+			font-family: "high";
+			font-weight: lighter;
+			color: #fff;
+			width: 100%;
+			outline: 0;
+			cursor: pointer;
+			max-width: 300px;
+		}
+		form button:hover
+		{
+			background: rgb(33, 137, 113);
+		}
+		form button:active
+		{
+			background: rgb(38, 9, 32);
+		}
+
+.summary h3
+{
+	font-size: 90%;
+	margin-bottom: 10px;
+}
+.summary p
+{
+	font-size: 120%;
+}
+.summary a
+{
+	display: inline-block;
+	padding: 10px 0;
+}
+
+.save
+{
+    margin-bottom: 5px;
+    margin-top: 15px;
+}
+
+.newPriceLbl
+{
+    margin-top: 15px;
+}
+
+#navigation-bar
+{
+	position: fixed;
+	left: 0;
+	width: 100%;
+	height: 75px;
+	border-top: 1px solid #e8e8e8;
+	background-color: #2aab8d;
+}
+	#navigation-bar > ul
+	{
+		width: 90%;
+		height: 100%;
+		max-width: 500px;
+		margin: 0 auto;
+		padding: 0;
+		list-style: none;
+	}
+		#navigation-bar > ul li
+		{
+			width: 33.33%;
+			height: 100%;
+			float: left;
+		}
+			#navigation-bar > ul li a
+			{
+				display: block;
+				text-decoration: none;
+				color: #fff;
+				padding-top: 25px;
+                padding-bottom: 25px;
+                font-size: large;
+                text-align: center;
+			}
+			#navigation-bar > ul li a:hover
+			{
+				background: rgba(0,0,0, 0.05);
+			}
+			#navigation-bar > ul li a:active
+			{
+				background: rgba(0,0,0, 0.1);
+			}
